--- a/演習.HTML
+++ b/演習.HTML
@@ -9,6 +9,57 @@
 </head>
 
 <body>
+  <h1>株式会社TECH</h1>
+  <ul>
+    <li>ホーム</li>
+    <li>企業情報</li>
+    <li>会社概要</li>
+    <li>よくある質問</li>
+    <li>お問い合わせ</li>
+  </ul>
+  <img src=".ing\mv.png" alt="風景1">
+  <p>最新のテクノロジーで社会課題を解決</p>
+  <h2>会社概要</h2>
+  <table>
+    <tr>
+      <th>会社名</th>
+      <td>株式会社THCH</td>
+    </tr>
+    <tr>
+      <th>代表者</th>
+      <td>山田太郎</td>
+    </tr>
+    <tr>
+      <th>所在地</th>
+      <td>東京都渋谷区神宮前</td>
+    </tr>
+    <tr>
+      <th>設立</th>
+      <td>2019/07/17</td>
+    </tr>
+    <tr>
+      <th>従業員数</th>
+      <td>100人</td>
+    </tr>
+    <tr>
+      <th>資本金</th>
+      <td>1000万円</td>
+    </tr>
+  </table>
+  <h2>お問い合わせ</h2>
+  <form action="detail.html" "method=" get">
+    <label for="corp">会社名</label>
+    <input type="text" name="corp" id="corp">
+    <label for="name">お名前</label>
+    <input type="text" name="name" id="name">
+    <label for="mail">メールアドレス</label>
+    <input type="email" name="mail" id="mail">
+    <label for="inquiry">お問い合わせ内容</label>
+    <textarea name="inquiry" cols="30" rows="5" id="inquiry"></textarea>
+    <input type="submit" name="button" value="お申し込み">
+    <small>©2020 TECH inc.</small>
+  </form>
+
 
 </body>
 
