--- a/演習.HTML
+++ b/演習.HTML
@@ -12,19 +12,19 @@
   <h1>株式会社TECH</h1>
   <ul>
     <li>
-      <a href="HTMLの演習問題\リンク先\detail.html">ホーム</a>
+      <a href="link\home.html">ホーム</a>
     </li>
     <li>
-      <a href=HTMLの演習問題\リンク先\企業情報.html>企業情報</a>
+      <a href="link\corp.html">企業情報</a>
     </li>
     <li>
-      <a href=HTMLの演習問題\リンク先\会社概要.html>会社概要</a>
+      <a href="link\test1.html">会社概要</a>
     </li>
     <li>
-      <a href=HTMLの演習問題\リンク先\よくある質問.html>よくある質問</a>
+      <a href="link\q.a.html">よくある質問</a>
     </li>
     <li>
-      <a href=HTMLの演習問題\リンク先\お問い合わせ.html>お問い合わせ</a>
+      <a href="link\q1.html">お問い合わせ</a>
     </li>
   </ul>
   <img src=".ing\mv.png" alt="風景1">
@@ -57,30 +57,28 @@
     </tr>
   </table>
   <h2>お問い合わせ</h2>
-  <div>
-    <form action="detail.html" "method=" post">
+  <form action="detail.html" method="post">
+    <div>
       <label for="corp">会社名</label>
       <input type="text" name="corp" id="corp">
-  </div>
-  <div>
-    <label for="name">お名前</label>
-    <input type="text" name="name" id="name">
-  </div>
-  <div>
-    <label for="mail">メールアドレス</label>
-    <input type="email" name="mail" id="mail">
-  </div>
-  <div>
-    <label for="inquiry">お問い合わせ内容</label>
-    <textarea name="inquiry" cols="30" rows="5" id="inquiry"></textarea>
-  </div>
-  <div>
-    <input type="submit" name="button" value="お申し込み">
-  </div>
-  <div>
-    <small>©2020 TECH inc.</small>
-  </div>
+    </div>
+    <div>
+      <label for="name">お名前</label>
+      <input type="text" name="name" id="name">
+    </div>
+    <div>
+      <label for="mail">メールアドレス</label>
+      <input type="email" name="mail" id="mail">
+    </div>
+    <div>
+      <label for="inquiry">お問い合わせ内容</label>
+      <textarea name="inquiry" cols="30" rows="5" id="inquiry"></textarea>
+    </div>
+    <div>
+      <input type="submit" name="button" value="お申し込み">
+    </div>
   </form>
+  <small>©2020 TECH inc.</small>
 </body>
 
 </html>
