--- a/link/test1.html
+++ b/link/test1.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<h1>ホーム</h1>
-
 <body>
-
+  <h1>会社概要</h1>
 </body>
-
 </html>
